# ukbb-ehr-data

./: .gitignore  CITATION.cff  LICENSE  README.md  file_paths.R  pyproject.toml  run_all.R  setup.R
01_prepare_data/: 01_subset_visit_data.R  01_subset_visit_data.py  02_clean_data.R  03_reg_history.R  04_data_period.R  05_secondary_care.R
02_extract_records/: 01_filter_data.R  02_anthropomorphic.R  03_blood_tests.R  04_demographic.R  05_family_history.R  06_diagnoses.R  07_prescriptions.R
data/: README.md
paper/: 01_self_reported_comparison.R  02_diabetes_phenotyping.R  03a_leicester_registration.R  03b_leicester_algorithm.R  04a_qdiabetes_registration.R  04b_qdiabetes_algorithm.R
visualisation/: 01_algorithm.R  02_phenotyping.R
